[package]
name = "blackbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2.63"
aes-gcm-siv = "^0.10.3"
# base64 = "^0.13.0"
#rand = "^0.8.5"
#getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]